--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@nuxtjs/tailwindcss": "^5.3.1",
+    "@vueuse/core": "^9.1.0",
+    "@vueuse/nuxt": "^9.1.0",
     "nuxt": "3.0.0-rc.6"
   },
   "dependencies": {
